# ceda-status-slack-bot

./: README.md  pyproject.toml  requirements.txt
ceda_status_slack_bot/: __main__.py  app.py
