[tool.poetry]
name = "ceda-status-slack-bot"
version = "0.1.0"
description = "A Slack bot for managing CEDA service status"
authors = ["Ed Borthwick <ed.borthwick@stfc.ac.uk>"]
readme = "README.md"
packages = [{include = "ceda_status_slack_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.18.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"